EKS-project/corona-final-aws/mysql.yaml


apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ClusterIP
  clusterIP: 10.100.100.100
  selector:
    app: mysql
  ports:
  - port: 3306

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.6
        ports:
        - name: mysql
          containerPort: 3306
      #   volumeMounts:
      #     - name: nfs-volume
      #       mountPath: /var/lib/mysql
      #       # mountPath: /
      # volumes:
      #   - name: nfs-volume
      #     persistentVolumeClaim:
      #       claimName: nfs-pvc
