EKS-project/corona-final-aws/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: coronamap-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: corona-map
              servicePort: 5001
